[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://src/assets/images/Fond.png" type="Texture" id=2]
[ext_resource path="res://src/playership/PlayerShip.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Cave-Story.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="PlayerShip" parent="." instance=ExtResource( 3 )]
position = Vector2( 185.193, 139.752 )

[node name="Label" type="Label" parent="."]
margin_left = 13.6037
margin_top = 9.52261
margin_right = 197.604
margin_bottom = 72.5226
custom_fonts/font = SubResource( 2 )
text = "Score : XXXX
"

[node name="Label2" type="Label" parent="."]
margin_left = 435.275
margin_top = 9.52261
margin_right = 619.275
margin_bottom = 72.5226
custom_fonts/font = SubResource( 2 )
text = "Temps : XXX
"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer10" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer10" to="." method="_on_Timer10_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
